 - Add subdomain member variables to form class
 - Allow action on forms of arbitrary rank
0.9.0 [2011-02-23]
 - Allow jump(Sigma, n) for matrix-valued expression Sigma
 - Bug fix in scalar curl operator
 - Bug fix in deviatoric operator
0.5.4 [2010-09-01]
 - Bug fixes in PartExtracter
 - Do not import x for coordinate
 - Add Circumradius to Cell (Cell.circumradius)
 - Add CellVolume to Cell (Cell.volume)
0.5.3 [2010-07-01]
 - Rename ElementRestriction --> RestrictedElement
 - Experimental import of x from tetrahedron
 - Make lhs/rhs work for resrictions
 - Redefine operator + for FiniteElements and replace + by *
 - Rename ElementUnion -> EnrichedElement
 - Add support for tan() and inverse trigonometric functions
0.5.2 [2010-02-15]
 - Attach form data to preprocessed form, accessible by form.form_data()
0.5.1 [2010-02-03]
 - Fix bug in propagate_restriction
0.5.0 [2010-02-01]
 - Several interface changes in FormData class
 - Introduce call preprocess(form) to be called at beginning of compilation
 - Rename BasisFunction --> Argument
 - Rename Function --> Coefficient
0.4.1 [2009-12-04]
 - Redefine grad().T --> grad()
 - New meaning of estimate_max_polynomial_degree
 - New function estimate_total_polynomial_degree
 - Allow degree = None and cell = None for elements
0.4.0 [2009-09-23]
 - Extensions for ElementRestriction (restrict FiniteElement to Cell)
 - Bug fix for lhs/rhs with list tensor types
 - Add new log function set_prefix
 - Add new log function log(level, message)
 - Added macro cell integral *dE
 - Added mechanism to add additional integral types
 - Added LiftingOperator and LiftingFunction
 - Added ElementRestriction
0.3.0 [2009-05-28]
 - Some critical bugfixes, in particular in differentiation.
 - Added form operators "system" and "sensitivity_rhs".
 - diff can take form as argument, applies to all integrands.
 - Rudimentary precedence handling for better
   use of parentheses in str(expression).
 - Added script ufl2py, mainly for debugging purposes.