@@ -1,3 +1,4 @@
+ - Update repr string in set_cell and set_degree (fix strange cache problem)
  - Add subdomain member variables to form class
  - Allow action on forms of arbitrary rank
 0.9.0 [2011-02-23]
